--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <img src="imagens/co-m.png" alt="">
         <img src="imagens/cilin conico-m.png " alt="cconi">
         <img src="imagens/esfera-m.png" alt="">
+        <p>Clique em uma das opções abaixo:</p>
         <p>
             <ol type="1">
                 <li><a href="paral-cubo.html" target="_blank">Paralelopipedo ou cubo</a></li>
